Implement basic, unstyled pagination system

--- a/in2it_site/static/css/style.css
+++ b/in2it_site/static/css/style.css
@@ -152,6 +152,10 @@ body{
 	overflow: visible;
 }
 
+.event-container{
+	margin-top:0px;
+}
+
 .event-listing-link:hover{
 	text-decoration: none;
 }
